<resources>
    <string name="app_name">Service Aja</string>
    <string name="serviceaja">ServiceAja</string>
    <string name="slogan">Solusi terbaik perawatan kendaraan anda</string>
    <string name="welcomeslogan">Apakah kendaraan Anda dalam keadaan baik?</string>
    <string name="daftarkansekarang">Daftarkan Akun baru Anda untuk mendapatkan keuntungannya, sekarang!</string>
    <string name="agree">Dengan mendaftar, saya setuju dengan syarat dan ketentuan yang berlaku</string>
    <string name="instantregister">- Atau Daftar Dengan Akun -</string>
    <string name="masukkankode">Masukkan 4 digit kode konfirmasi</string>
    <string name="kode4digit">Kode 4 digit verifikasi akun telah dikirim ke e-mail/no.telepon Anda. Silahkan periksa dan masukkan kode tersebut di bawah ini.</string>
    <string name="akuntelah">Akun anda telah terdaftar! Masuk sekarang, pedulilah dengan kendaraan Anda!</string>
    <string name="masukkanpassbaru">Masukkan Password baru yang mudah diingat, dan sulit ditebak!</string>
    <string name="cekinfo"><b>Cek Informasi Kendaraan Anda Sekarang!</b></string>
    <string name="bengkeltersedia"><b>Bengkel yang tersedia untuk Anda, Pesan Sekarang!</b></string>
    <string name="caribarang">Cari Barang, Service atau Bengkel</string>
    <string name="masukkankatakunci">Masukkan kata kunci pencarian berupa nama bengkel, service, atau barang/sparepart</string>
    <string name="segeratambah">Segera tambahkan ke Keranjang Anda!</string>
    <string name="infoken">Informasi Kendaraan</string>
    <string name="detailproduk">Balancing dan Spooring berteknologi 4D terbaru</string>
    <string name="detailreview">Service bagus, ramah. Pelanggan dilayani dengan baik dan penjelasan yang detail</string>
    <string name="alamatBuyer">Komplek Cemara Asri Jl. Boulevard Raya No.32J</string>
    <string name="servicenote">Note :  Setiap pembelajaan produk yang disertai dengan dilakukannya service akan mengikuti metode service yang dilakukan.</string>
    <string-array name="lokasispinner">
        <item>Rumah</item>
        <item>Kantor</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user">User</string>
    <string name="partner">Mitra</string>
    <string name="name">Nama</string>
    <string name="email">E-mail</string>
    <string name="registered_email">E-mail Terdaftar</string>
    <string name="tel_number">No. Telp</string>
    <string name="password">Password</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_password">Konfimasi Password</string>

    <string name="settings">Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="profile_picture">Foto Profil</string>
    <string name="background_profile_picture">Foto Background Profil</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="edit_address">Edit Alamat</string>

    <string name="vehicle_info">Informasi Kendaraan</string>
    <string name="vehicle_brand">Merk</string>
    <string name="vehicle_year">Tahun</string>
    <string name="vehicle_photo">Foto Kendaraan</string>
    <string name="other_vehicle">Kendaraan Lain</string>
    <string name="last_service">Service Terakhir</string>
    <string name="add">Tambah</string>
    <string name="delete">Hapus</string>
    <string name="edit">EDIT</string>
    <string name="change_password">Ubah Password</string>
    <string name="warna">Warna</string>
    <string name="contohID">keepitreal</string>
    <string name="contohEmail">keepitreal@gmail.com</string>
    <string name="contohNoTelp">+62 812-3456-7890</string>
    <string name="contohPlat">BK XXXX XYZ</string>
    <string name="toyota">Toyota</string>
    <string name="contohNama">KeepItReal</string>
    <string name="city">Kota</string>
    <string name="contohKota">Medan</string>
    <string name="fortuner">Fortuner</string>
    <string name="contohTahun">2018</string>
    <string name="contohTanggal">1 Januari 2020</string>
    <string name="color">Warna</string>
    <string name="bahan_bakar">Bahan Bakar</string>
    <string name="white">Putih</string>
    <string name="bensin">Bensin</string>
    <string name="no_rangka">No. Rangka</string>
    <string name="no_mesin">No. Mesin</string>
    <string name="no_bpkb">No. BPKB</string>
    <string name="contohNoRangka">123456789123</string>
    <string name="contohNoMesin">234567891234</string>
    <string name="contohNoBPKB">345678912345</string>
    <string name="search">Telusuri</string>
    <string name="greetings">Halo, User</string>
    <string name="wishlist">Wishlist</string>
    <string name="kategori">Kategori</string>
    <string name="service">Service</string>
    <string name="sparepart">Sparepart</string>
    <string name="cuci_mobil">Cuci Mobil</string>
    <string name="mobil_derek">Mobil Derek</string>
    <string name="more">Lain-Lain</string>
    <string name="car">Mobil</string>
    <string name="motorbike">Motor</string>
    <string name="email_address">Alamat E-mail</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>

    <string-array name="provinsi">
        <item>ACEH</item>
        <item>SUMATERA UTARA</item>
        <item>SUMATERA BARAT</item>
        <item>SUMATERA SELATAN</item>
        <item>RIAU</item>
        <item>KEPULAUAN RIAU</item>
        <item>JAMBI</item>
        <item>BENGKULU</item>
        <item>BANGKA BELITUNG</item>
        <item>LAMPUNG</item>
    </string-array>
    <string-array name="kabupaten_kota">
        <item>MEDAN</item>
        <item>BINJAI</item>
    </string-array>
    <string-array name="kecamatan">
        <item>BINJAI KOTA</item>
        <item>BINJAI UTARA</item>
        <item>BINJAI SELATAN</item>
        <item>BINJAI BARAT</item>
        <item>BINJAI TIMUR</item>
    </string-array>
    <string-array name="merkMobil">
        <item>Toyota</item>
        <item>Mitsubishi</item>
        <item>Daihatsu</item>
        <item>Honda</item>
        <item>Nissan</item>
        <item>Hyundai</item>
    </string-array>
    <string-array name="namaMobil">
        <item>Avanza</item>
        <item>Innova</item>
        <item>Fortuner</item>
        <item>Xpander</item>
        <item>Pajero Sport</item>
        <item>Outlander Sport</item>
        <item>Xenia</item>
        <item>Sigra</item>
        <item>Terios</item>
        <item>CR-V</item>
        <item>HR-V</item>
        <item>Civic</item>
        <item>Juke</item>
        <item>March</item>
        <item>Santa Fe</item>
        <item>Tucson</item>
    </string-array>
    <string-array name="bahanBakar">
        <item>Bensin</item>
        <item>Solar</item>
        <item>Listrik</item>
    </string-array>
    <string-array name="metodePembayaran">
        <item>Kartu Kredit</item>
        <item>Transfer Bank</item>
        <item>M-Banking</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>