<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/daftarKendaraan_kendaraan1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/layout_profile_info"
    app:layout_constraintStart_toStartOf="parent"
    android:padding="10dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/info_item_background" >
    <androidx.cardview.widget.CardView
        android:id="@+id/detailKendaraan_frameFotoKendaraan"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="20dp"
        android:background="@drawable/picture_background" >
        <ImageView
            android:id="@+id/detailKendaraan_fotoKendaraan"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/fortuner"
            android:contentDescription="@string/vehicle_photo"
            android:scaleType="fitXY"
            android:background="@drawable/picture_background_dark"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/detailKendaraan_noPlatKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/detailKendaraan_frameFotoKendaraan"
        android:layout_marginStart="10dp"
        android:text="@string/contohPlat"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_medium" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_merkKendaraan"
        app:layout_constraintStart_toEndOf="@id/detailKendaraan_frameFotoKendaraan"
        android:layout_marginStart="10dp"
        android:text="@string/vehicle_brand"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_namaKendaraan"
        app:layout_constraintStart_toStartOf="@id/detailKendaraan_namaKendaraan"
        android:text="@string/name"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_tahunKendaraan"
        app:layout_constraintStart_toStartOf="@id/detailKendaraan_tahunKendaraan"
        android:text="@string/vehicle_year"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:id="@+id/detailKendaraan_merkKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_noPlatKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_bahanBakarKendaraan"
        app:layout_constraintStart_toEndOf="@id/detailKendaraan_frameFotoKendaraan"
        android:layout_marginStart="10dp"
        android:text="@string/toyota"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:id="@+id/detailKendaraan_namaKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_noPlatKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_bahanBakarKendaraan"
        app:layout_constraintStart_toEndOf="@id/detailKendaraan_merkKendaraan"
        app:layout_constraintEnd_toStartOf="@id/detailKendaraan_tahunKendaraan"
        android:text="@string/fortuner"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:id="@+id/detailKendaraan_tahunKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_noPlatKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_bahanBakarKendaraan"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:text="@string/contohTahun"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_merkKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_warnaKendaraan"
        app:layout_constraintStart_toEndOf="@id/detailKendaraan_frameFotoKendaraan"
        android:layout_marginStart="10dp"
        android:text="@string/color"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_namaKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_bahanBakarKendaraan"
        app:layout_constraintStart_toStartOf="@id/detailKendaraan_bahanBakarKendaraan"
        android:text="@string/bahan_bakar"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:id="@+id/detailKendaraan_warnaKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_merkKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_noMesinKendaraan"
        app:layout_constraintStart_toEndOf="@id/detailKendaraan_frameFotoKendaraan"
        android:layout_marginStart="10dp"
        android:text="@string/white"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:id="@+id/detailKendaraan_bahanBakarKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_namaKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_noMesinKendaraan"
        app:layout_constraintStart_toEndOf="@id/detailKendaraan_warnaKendaraan"
        app:layout_constraintEnd_toStartOf="@id/detailKendaraan_tahunKendaraan"
        android:text="@string/bensin"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_noRangkaKendaraan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:text="@string/no_rangka"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_noMesinKendaraan"
        app:layout_constraintStart_toStartOf="@id/detailKendaraan_noMesinKendaraan"
        android:text="@string/no_mesin"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_noBPKBKendaraan"
        app:layout_constraintStart_toStartOf="@id/detailKendaraan_noBPKBKendaraan"
        android:text="@string/no_bpkb"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:id="@+id/detailKendaraan_noRangkaKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_frameFotoKendaraan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_btnEdit"
        android:layout_marginStart="10dp"
        android:text="@string/contohNoRangka"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:id="@+id/detailKendaraan_noMesinKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_frameFotoKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_btnEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/contohNoMesin"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:id="@+id/detailKendaraan_noBPKBKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailKendaraan_frameFotoKendaraan"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/contohNoBPKB"
        android:fontFamily="@font/poppins_light" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_btnEdit"
        app:layout_constraintEnd_toStartOf="@id/detailKendaraan_serviceTerakhirKendaraan"
        android:layout_marginEnd="20dp"
        android:text="@string/last_service"
        android:fontFamily="@font/poppins_bold" />
    <TextView
        android:id="@+id/detailKendaraan_serviceTerakhirKendaraan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailKendaraan_btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:text="@string/contohTanggal"
        android:fontFamily="@font/poppins_light" />
    <ImageButton
        android:id="@+id/detailKendaraan_btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detailKendaraan_btnEdit"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete"
        android:background="@color/transparent"
        android:onClick="hapusKendaraan" />
    <ImageButton
        android:id="@+id/detailKendaraan_btnEdit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/edit"
        android:background="@color/transparent"
        android:onClick="editKendaraan" />

</androidx.constraintlayout.widget.ConstraintLayout>