<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/gold"
        android:paddingVertical="20dp" >
        <Button
            android:id="@+id/profilUser_btnUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_medium" />
        <Button
            android:id="@+id/profilUser_btnMitra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner"
            app:layout_constraintStart_toEndOf="@id/profilUser_btnUser"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings"
            app:layout_constraintEnd_toStartOf="@id/btn_logout"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/transparent" />
        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/logout"
            android:src="@drawable/ic_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/transparent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/profile_bg"
        android:contentDescription="@string/background_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_topbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/profile_background"
        app:layout_constraintBottom_toBottomOf="@id/profile_background"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:background="@drawable/profile_background">
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_photo_background"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/profilUser_btnEdit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_profile"
            android:tint="@color/white"
            android:backgroundTint="@color/transparent"/>
        <ImageButton
            android:id="@+id/profilUser_btnEditLocation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/profilUser_btnEdit"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_edit_location"
            android:contentDescription="@string/edit_address"
            android:tint="@color/white"
            android:backgroundTint="@color/transparent" />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/contohNama"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_regular" />
        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:text="@string/contohID"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_medium" />
        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:text="@string/registered_email"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_regular" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_id"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/contohEmail"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_medium" />
        <TextView
            android:id="@+id/label_no_telp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:text="@string/tel_number"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_regular" />
        <TextView
            android:id="@+id/no_telp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:text="@string/contohNoTelp"
            android:textColor="@color/white"
            android:fontFamily="@font/dmsans_medium" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_profile_info"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/vehicle_info"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_vehicle_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_profile_info"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/info_item_background" >
        <androidx.cardview.widget.CardView
            android:id="@+id/vehicle_photo_card"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:background="@drawable/picture_background" >
            <ImageView
                android:id="@+id/vehicle_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/fortuner"
                android:contentDescription="@string/vehicle_photo"
                android:scaleType="fitXY"
                android:background="@drawable/picture_background"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/no_plat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/vehicle_photo_card"
            android:layout_marginStart="10dp"
            android:text="@string/contohPlat"
            android:textSize="28sp"
            android:fontFamily="@font/poppins_medium" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/no_plat"
            app:layout_constraintBottom_toTopOf="@id/vehicle_brand"
            app:layout_constraintStart_toEndOf="@id/vehicle_photo_card"
            android:layout_marginStart="10dp"
            android:text="@string/vehicle_brand"
            android:fontFamily="@font/poppins_bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/no_plat"
            app:layout_constraintBottom_toTopOf="@id/vehicle_name"
            app:layout_constraintStart_toStartOf="@id/vehicle_name"
            android:text="@string/name"
            android:fontFamily="@font/poppins_bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/no_plat"
            app:layout_constraintBottom_toTopOf="@id/vehicle_year"
            app:layout_constraintStart_toStartOf="@id/vehicle_year"
            android:text="@string/vehicle_year"
            android:fontFamily="@font/poppins_bold" />
        <TextView
            android:id="@+id/vehicle_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/last_service"
            app:layout_constraintStart_toEndOf="@id/vehicle_photo_card"
            android:layout_marginStart="10dp"
            android:text="@string/toyota"
            android:fontFamily="@font/poppins_light" />
        <TextView
            android:id="@+id/vehicle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/last_service"
            app:layout_constraintStart_toEndOf="@id/vehicle_brand"
            app:layout_constraintEnd_toStartOf="@id/vehicle_year"
            android:text="@string/fortuner"
            android:fontFamily="@font/poppins_light" />
        <TextView
            android:id="@+id/vehicle_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/last_service"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:text="@string/contohTahun"
            android:fontFamily="@font/poppins_light" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vehicle_brand"
            app:layout_constraintBottom_toTopOf="@id/profilUser_btnKendaraanLain"
            app:layout_constraintStart_toEndOf="@id/vehicle_photo_card"
            android:layout_marginStart="10dp"
            android:text="@string/last_service"
            android:fontFamily="@font/poppins_bold" />
        <TextView
            android:id="@+id/last_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/profilUser_btnKendaraanLain"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/contohTanggal"
            android:fontFamily="@font/poppins_light" />
        <LinearLayout
            android:id="@+id/profilUser_btnKendaraanLain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/other_vehicle"
                android:fontFamily="@font/poppins_medium" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:contentDescription="@string/other_vehicle"
                android:background="@color/transparent" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>